crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_with_order_by_limit.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) WITH n ORDER BY n.name LIMIT 5 RETURN n\")"
---
SOURCE_FILE@0..49
  STATEMENT@0..49
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    WITH_CLAUSE@9..40
      WHITESPACE@9..10 " "
      WITH_KW@10..14 "WITH"
      RETURN_BODY@14..40
        RETURN_ITEMS@14..16
          RETURN_ITEM@14..16
            VAR_EXPR@14..16
              WHITESPACE@14..15 " "
              IDENT@15..16 "n"
        ORDER_BY@16..32
          WHITESPACE@16..17 " "
          ORDER_KW@17..22 "ORDER"
          WHITESPACE@22..23 " "
          BY_KW@23..25 "BY"
          ORDER_ITEM@25..32
            PROP_ACCESS_EXPR@25..32
              VAR_EXPR@25..27
                WHITESPACE@25..26 " "
                IDENT@26..27 "n"
              DOT@27..28 "."
              IDENT@28..32 "name"
        LIMIT_SUBCLAUSE@32..40
          WHITESPACE@32..33 " "
          LIMIT_KW@33..38 "LIMIT"
          LITERAL_EXPR@38..40
            WHITESPACE@38..39 " "
            INT_LITERAL@39..40 "5"
    RETURN_CLAUSE@40..49
      WHITESPACE@40..41 " "
      RETURN_KW@41..47 "RETURN"
      RETURN_BODY@47..49
        RETURN_ITEMS@47..49
          RETURN_ITEM@47..49
            VAR_EXPR@47..49
              WHITESPACE@47..48 " "
              IDENT@48..49 "n"
