crates/cypher-syntax/tests/snapshots/syntax_snapshots__err_call_block_form_deferred.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"CALL { MATCH (n) RETURN n }\")"
---
SOURCE_FILE@0..27
  STATEMENT@0..27
    ERROR@0..27
      CALL_KW@0..4 "CALL"
      WHITESPACE@4..5 " "
      L_BRACE@5..6 "{"
      WHITESPACE@6..7 " "
      MATCH_KW@7..12 "MATCH"
      WHITESPACE@12..13 " "
      L_PAREN@13..14 "("
      IDENT@14..15 "n"
      R_PAREN@15..16 ")"
      WHITESPACE@16..17 " "
      RETURN_KW@17..23 "RETURN"
      WHITESPACE@23..24 " "
      IDENT@24..25 "n"
      WHITESPACE@25..26 " "
      R_BRACE@26..27 "}"
---errors---
@5: CALL { ... } block subqueries are deferred per spec §19 / §20 D1
