crates/cypher-syntax/tests/snapshots/syntax_snapshots__err_list_predicate_unterminated_where.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"RETURN ANY(x IN xs WHERE\")"
---
SOURCE_FILE@0..24
  STATEMENT@0..24
    RETURN_CLAUSE@0..24
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..24
        RETURN_ITEMS@6..24
          RETURN_ITEM@6..24
            LIST_PREDICATE_EXPR@6..24
              WHITESPACE@6..7 " "
              ANY_KW@7..10 "ANY"
              L_PAREN@10..11 "("
              NAME@11..12
                IDENT@11..12 "x"
              WHITESPACE@12..13 " "
              IN_KW@13..15 "IN"
              VAR_EXPR@15..18
                WHITESPACE@15..16 " "
                IDENT@16..18 "xs"
              WHITESPACE@18..19 " "
              WHERE_KW@19..24 "WHERE"
---errors---
@24: expected predicate expression after WHERE in list predicate
@24: expected `)` to close list predicate
