crates/cypher-syntax/tests/snapshots/syntax_snapshots__err_map_projection_missing_colon.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) RETURN n { age 30 }\")"
---
SOURCE_FILE@0..29
  STATEMENT@0..29
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..29
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..29
        RETURN_ITEMS@16..29
          RETURN_ITEM@16..29
            MAP_PROJECTION@16..29
              VAR_EXPR@16..18
                WHITESPACE@16..17 " "
                IDENT@17..18 "n"
              WHITESPACE@18..19 " "
              L_BRACE@19..20 "{"
              MAP_PROJECTION_ITEM@20..27
                WHITESPACE@20..21 " "
                IDENT@21..24 "age"
                LITERAL_EXPR@24..27
                  WHITESPACE@24..25 " "
                  INT_LITERAL@25..27 "30"
              WHITESPACE@27..28 " "
              R_BRACE@28..29 "}"
---errors---
@25: expected ':' in map projection literal item
