crates/cypher-syntax/tests/snapshots/syntax_snapshots__err_missing_closing_bracket_in_rel.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 401
expression: "format_with_errors(\"MATCH (a)-[r (b) RETURN a\")"
---
SOURCE_FILE@0..25
  STATEMENT@0..25
    MATCH_CLAUSE@0..16
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..16
        PATTERN_PART@5..16
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
          REL_PATTERN@9..12
            MINUS@9..10 "-"
            REL_DETAIL@10..12
              L_BRACK@10..11 "["
              NAME@11..12
                IDENT@11..12 "r"
          NODE_PATTERN@12..16
            WHITESPACE@12..13 " "
            L_PAREN@13..14 "("
            NAME@14..15
              IDENT@14..15 "b"
            R_PAREN@15..16 ")"
    RETURN_CLAUSE@16..25
      WHITESPACE@16..17 " "
      RETURN_KW@17..23 "RETURN"
      RETURN_BODY@23..25
        RETURN_ITEMS@23..25
          RETURN_ITEM@23..25
            VAR_EXPR@23..25
              WHITESPACE@23..24 " "
              IDENT@24..25 "a"
---errors---
@13: expected ']' to close relationship detail
@13: expected '-' or '->' to close relationship
